# AscendFast

./: .gitignore  AGENTS.md  CLAUDE.md  agent_client.py  analysis.py  apply.py  benchmark.py  correctness.py  device_utils.py  env_probe.py  ge_check_op.json  main.py  mode_store.py  models.py  operator_gen.py  optimization.py  optimization_api.md  profile.py  profile_npu.py  profile_runner.py  pyproject.toml  strategy.py  verify.py  workspace_loader.py
.claude/: settings.local.json
.claude/agents/: analysis-agent.md  apply-agent.md  operator-agent.md  optimization-agent.md  profile-agent.md  strategy-agent.md
.claude/skills/npu-analysis/: SKILL.md
.claude/skills/npu-apply/: SKILL.md
.claude/skills/npu-operator/: SKILL.md
.claude/skills/npu-strategy/: SKILL.md
docs/: codex_agent_backend.md
kernels/: README.md  pyproject.toml
kernels/ascendc_ops/_installed_opp/vendors/customize/: version.info
kernels/ascendc_ops/_installed_opp/vendors/customize/framework/tensorflow/: npu_supported_ops.json
kernels/ascendc_ops/add_demo/: add_demo.json
kernels/ascendc_ops/add_demo/AddDemo/build_out/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
kernels/ascendc_ops/add_demo/AddDemo/build_out/autogen/: aclnn_add_demo.cpp  aclnn_add_demo.h
kernels/ascendc_ops/add_demo/AddDemo/build_out/op_host/: Makefile  cmake_install.cmake
kernels/ascendc_ops/add_demo/AddDemo/build_out/op_kernel/: Makefile  cmake_install.cmake
kernels/ascendc_ops/add_demo/AddDemo/cmake/: config.cmake
kernels/ascendc_ops/add_demo/AddDemo/op_host/: add_demo_tiling.h
kernels/ascendc_ops/add_demo/AddDemo/op_kernel/: CMakeLists.txt  add_demo.cpp
kernels/ascendc_ops/ascendfast_custom_ops/: CMakePresets.json  build.sh
kernels/ascendc_ops/ascendfast_custom_ops/build_out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  custom_opp_openEuler_aarch64.run  custom_opp_openEuler_aarch64.run.json  install_manifest.txt
kernels/ascendc_ops/ascendfast_custom_ops/build_out/autogen/: aclnn_add_demo.cpp  aic-ascend910_93-ops-info.ini  op_proto.h
kernels/ascendc_ops/ascendfast_custom_ops/build_out/framework/: Makefile  cmake_install.cmake
kernels/ascendc_ops/ascendfast_custom_ops/build_out/framework/tf_plugin/: Makefile  cmake_install.cmake
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_host/: Makefile  cmake_install.cmake
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_kernel/: Makefile  cmake_install.cmake
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_kernel/binary/ascend910_93/add_demo/: AddDemo_d58661ffc141e782e1c3a4565b4023b3.json  AddDemo_d6687bc497d24a97d769cd6b825c218e.json
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_kernel/binary/config/ascend910_93/: add_demo.json  binary_info_config.json
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_kernel/binary/dynamic/: add_demo.cpp  add_demo.py
kernels/ascendc_ops/ascendfast_custom_ops/build_out/op_kernel/tbe/op_info_cfg/ai_core/ascend910_93/: aic-ascend910_93-ops-info.json
kernels/ascendc_ops/ascendfast_custom_ops/build_out/scripts/: upgrade.sh
kernels/ascendc_ops/ascendfast_custom_ops/cmake/: config.cmake  device_task.cmake  func.cmake  makeself.cmake
kernels/ascendc_ops/ascendfast_custom_ops/cmake/util/: ascendc_gen_static_library.py  ascendc_gen_vendor_cmake.py  ascendc_pack_opregistry.py  insert_simplified_keys.py  parse_ini_to_json.py
kernels/ascendc_ops/ascendfast_custom_ops/framework/tf_plugin/: tensorflow_add_demo_plugin.cc
kernels/ascendc_ops/ascendfast_custom_ops/op_host/: CMakeLists.txt  add_demo.cpp
kernels/ascendc_ops/ascendfast_custom_ops/scripts/: install.sh
kernels/csrc/: adapter_add_demo.cpp  adapter_template.cpp  build_adapter.py
kernels/docs/: C2_add_operator_howto.md  C2_operator_delivery_contract.md
kernels/examples/: call_chain_demo.py  use_my_linear_patch.py
kernels/src/ascendfast_ops/: __init__.py  my_linear.py
kernels/src/ascendfast_ops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/tests/: test_my_linear.py
profiles/profile_py_qwen_real/: profile_report.json
profiles/profile_py_yi_6b_real/: profile_report.json
scripts/: ascend-env.sh
skills/npu-analysis/: SKILL.md
